changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make proto.
Nicolas Weeger 2010-05-06

ANSI C89 fix.
 server/quest.c
Nicolas Weeger 2010-05-04

server/player.c: don't switch to account mode if no account name (else segfault).
This could happen if the client sends the setup command but starts playing without
actually logging in.
Nicolas Weeger 2010-05-01

Enforce 2 characters minimum for account passwords, else accounts with 1
character can't create new characters. Some code cleaning.
 socket/request.c
Nicolas Weeger 2010-05-01

server/account_char.c: Modify to use the map name, not path for character
    listing if that data is available - gives nicer output.
socket/request.c: Add numeric face number for character information, add
    standard handling to send face number to client before use.
test/unit/common/check_living.c: Minor change to make it C89 compliant.
MSW 2010-04-26

server/quest.c: Allow quest definition files to 'include' other quest definition
files. Make the error messages from the quest file parsing code more
explicit to make tracking down errors easier. Add quest_get_by_code() which
quest_get() now acts as a wrapper to, so that error messages can be given if
a quest is defined multiple times.
Change the default quest file to world.quests so that old servers will still
work properly (but without the new syntax)
Brendan Lally 2010-04-26 

Clear hp fixing code.
Nicolas Weeger 2010-04-26

Clean player grace fixing code.
Nicolas Weeger 2010-04-26

Clean player sp fixing code.
Nicolas Weeger 2010-04-26

Extract part of fix_object() to fix_player(), to make the function more manageable.