@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't send warnings on the server log from the DM's 'create' command.
+Nicolas Weeger 2010-05-06
+
 Make proto.
 Nicolas Weeger 2010-05-06
 
